# ptrtools

./: CMakeLists.txt  README.md
include/: ptrtools.hpp
include/ptrtools/: array.hpp  basic.hpp  flexible.hpp  struct.hpp  utility.hpp
test/: main.cpp
